<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shad"
        android:orientation="vertical"
>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/group_9"

            android:orientation="horizontal"
    >
        <ImageView
                android:id="@+id/group_2"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="30dp"
                android:layout_alignParentTop="true"
                android:layout_gravity="center"
                android:background="@drawable/cycle"
        />
        <TextView
                android:layout_width="116dp"
                android:layout_height="16dp"
                android:layout_marginLeft="8dp"
                android:text="@string/all_smoke"
                android:gravity="center_vertical"
                android:textAppearance="@style/top_text"

        />
        <TextView
                android:id="@+id/all_sigaret"
                android:layout_width="52dp"
                android:layout_height="32dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="4dp"
                android:text="500"
                android:textAppearance="@style/number"
                android:gravity="center"

        />
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
    >

        <LinearLayout

                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="140dp"
                android:orientation="vertical"
                android:layout_gravity="left"
                android:layout_marginRight="4dp"
                android:background="@drawable/group_10"
        >
            <TextView
                    android:id = "@+id/similar_sigaret"
                    android:layout_width="79dp"
                    android:layout_height="53dp"
                    android:layout_marginTop="16dp"
                    android:text="200"
                    android:textAppearance="@style/big_number"
                    android:layout_gravity="center_horizontal"
            />
            <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="horizontal"

            >
                <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="8dp"
                        android:background="@drawable/cycle"
                />
                <TextView
                        android:layout_width="70dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="8dp"

                        android:text="@string/sigar"

                />
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:orientation="vertical"
                android:layout_marginLeft="4dp"
                android:background="@drawable/group_10"
        >
            <TextView
                    android:id = "@+id/electronic_sigaret"
                    android:layout_width="79dp"
                    android:layout_height="53dp"
                    android:layout_marginTop="16dp"
                    android:text="250"
                    android:layout_gravity="center_horizontal"
                    android:textAppearance="@style/big_number"
            />
            <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="horizontal"

            >
                <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="8dp"
                        android:background="@drawable/cycle"
                />
                <TextView
                        android:layout_width="70dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="8dp"

                        android:text="@string/electro_sigar"

                />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/dp_shadow"
            android:layout_width="match_parent"
            android:layout_height="330dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:background="@drawable/group_11"

    >
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
        >
            <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:background="@drawable/cycle"
            />
            <TextView
                    android:layout_width="250dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/total_number_of_cigarettes_smoked"
                    android:gravity="center_vertical"
                    android:textAppearance="@style/top_text"
            />

        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
              android:layout_width="match_parent"
              android:layout_height="290dp"
              android:id="@+id/recyclelistview"
              android:scrollbars="vertical">
        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>

</LinearLayout>