<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shad"
        android:orientation="vertical"
>
    <ScrollView
            android:id="@+id/activity_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    >
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/group_9"
            >
                <ImageView
                        android:id="@+id/group_2"
                        android:layout_width="24dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="14dp"
                        android:background="@mipmap/package_cigarette"
                        android:layout_centerVertical="true"/>
                <TextView
                        android:layout_width="116dp"
                        android:layout_height="wrap_content"
                        android:text="@string/all_smoke"
                        android:gravity="center_vertical"
                        android:textAppearance="@style/top_text"
                        android:layout_centerVertical="true"

                        android:layout_marginLeft="54dp"

                        android:layout_alignParentLeft="true"/>
                <TextView
                        android:id="@+id/all_sigaret"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="500"
                        android:textAppearance="@style/number"
                        android:gravity="center"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="194dp"
                        android:layout_alignParentLeft="true"
                />

            </RelativeLayout>
            <LinearLayout
                    android:layout_marginTop="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="165dp"
                    android:orientation="horizontal"
            >

                <LinearLayout

                        android:layout_width="175dp"
                        android:layout_height="165dp"
                        android:layout_gravity="center"
                        android:background="@drawable/card"
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="4dp"
                        android:orientation="vertical"
                        android:layout_marginStart="5dp"

                >
                    <TextView
                            android:id="@+id/similar_sigaret"
                            android:text="200"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textAppearance="@style/big_number"
                            android:layout_marginTop="21dp"
                    />
                    <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="21dp"
                            android:orientation="horizontal">
                        <TextView
                                android:layout_width="80dp"
                                android:layout_height="30dp"
                                android:layout_gravity="center"
                                android:textAppearance="@style/text_on_card"
                                android:text="@string/sigar"
                        />
                        <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginLeft="5dp"
                                android:layout_marginRight="5dp"
                                android:src="@mipmap/cigarette_icon"

                        />

                    </LinearLayout>

                </LinearLayout>
                <LinearLayout

                        android:layout_width="175dp"
                        android:layout_height="165dp"
                        android:layout_gravity="center"
                        android:background="@drawable/card"
                        android:orientation="vertical"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="3dp"
                        android:layout_marginRight="3dp"
                        >
                    <TextView
                            android:id="@+id/electronic_sigaret"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textAppearance="@style/big_number"
                            android:layout_marginTop="21dp"
                            android:text="250"

                    />
                    <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="21dp"
                            android:orientation="horizontal">

                        <TextView
                                android:layout_width="80dp"
                                android:layout_height="30dp"
                                android:layout_gravity="center"
                                android:textAppearance="@style/text_on_card"
                                android:text="@string/electro_sigar"

                        />
                        <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginLeft="5dp"
                                android:layout_marginRight="5dp"
                                android:src="@mipmap/e_cigarette"

                        />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/dp_shadow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical"
                    android:background="@drawable/group_11"

            >
                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"

                >
                    <ImageView
                            android:layout_width="24dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="14dp"
                            android:background="@mipmap/clock"
                            android:layout_centerVertical="true"
                    />
                    <TextView
                            android:layout_width="250dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="53dp"
                            android:textColor="@color/text_color"
                            android:text="@string/total_number_of_cigarettes_smoked"
                            android:layout_centerVertical="true"
                    />
                </RelativeLayout>
                <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/recyclelistview"
                        android:background="@color/recycle_background"
                        android:layout_marginLeft="14dp">
                </androidx.recyclerview.widget.RecyclerView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>